Vyhodnotenie ŠZS-pipes (mena tituly, študijné programy), uprava č. komisie, dáta už zobrazujú správny formát, upravený názov stlpcov pre označenie 2. hlavičky

--- a/bakalarka-frontend/src/app/login/login.component.scss
+++ b/bakalarka-frontend/src/app/login/login.component.scss
@@ -1,6 +1,6 @@
 .loginpage {
-  // background: #034F50;
-  background: #50A5A6;
+  // background: #50A5A6;
+  background: #dee7f7;
   padding: 120px;
   border-radius: 5px;
   
