--- a/bakalarka-frontend/src/app/pages/accounts/components/accounts/accounts.component.html
+++ b/bakalarka-frontend/src/app/pages/accounts/components/accounts/accounts.component.html
@@ -1,10 +1,11 @@
 <div class=block--account>
   <h1>Správa účtov</h1>
-
+<hr>
+  <h2>Pridanie používateľa do systému</h2>
   <app-accounts-form></app-accounts-form>
 
   <div>
-    <h2>Zoznam administrátorov</h2>
+    <h2>Zoznam používateľov</h2>
     <app-accounts-list></app-accounts-list>
   </div>
   
