--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list/state-final-exams-list.component.html
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list/state-final-exams-list.component.html
@@ -1,3 +1,12 @@
+<hr>
+<button
+  class="btn btn-raised btn-primary"
+  matTooltip="Exportuje sa celkové vyhodnotenie ŠZS."
+  (click)="export()">
+    Exportovať vyhodnotenie ŠZS
+</button>
+<hr>
+
 <table mat-table [dataSource]="dataSource">
     <!-- id -->
     <ng-container matColumnDef="id">
@@ -5,9 +14,9 @@
       <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
-    <!-- uzavrte studium -->
+    <!-- uzavrete studium -->
     <ng-container matColumnDef="uzavreteStudium">
-      <th mat-header-cell *matHeaderCellDef>Uzavrete studium</th>
+      <th mat-header-cell *matHeaderCellDef>Uzavreté štúdium A/N</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.uzavreteStudium }}<input type="text" value="row.uzavreteStudium" [(ngModel)]="row.uzavreteStudium" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
@@ -19,9 +28,9 @@
 
     <!-- studProgram -->
     <ng-container matColumnDef="studProgram">
-      <th mat-header-cell *matHeaderCellDef>štud.program</th>
-      <!-- <td mat-cell *matCellDef="let row">{{ row.identifikaciaStudia }}</td> -->
-      <td mat-cell *matCellDef="let row">{{ row.studProg }}</td>
+      <th mat-header-cell *matHeaderCellDef>Študijný program</th>
+      <td mat-cell *matCellDef="let row">{{ row.identifikaciaStudia | formatStudyProgramme }}</td>
+      <!-- <td mat-cell *matCellDef="let row">{{ row.studProg }}</td> -->
     </ng-container>
 
      <!-- datumSS -->
@@ -39,134 +48,134 @@
 
      <!-- predsenaKomisie -->
      <ng-container matColumnDef="predsenaKomisie">
-      <th mat-header-cell *matHeaderCellDef>predseda komisie</th>
-      <td mat-cell *matCellDef="let row">{{ row.predseda }}</td>
+      <th mat-header-cell *matHeaderCellDef>Predseda komisie</th>
+      <td mat-cell *matCellDef="let row">{{ row.predseda | formatLastname }}</td>
     </ng-container>
 
      <!-- tajomnik -->
      <ng-container matColumnDef="tajomnik">
-      <th mat-header-cell *matHeaderCellDef>tajomník</th>
-      <td mat-cell *matCellDef="let row">{{ row.tajomnik }}</td>
+      <th mat-header-cell *matHeaderCellDef>Tajomník</th>
+      <td mat-cell *matCellDef="let row">{{ row.tajomnik | formatLastname }}</td>
     </ng-container>
 
      <!-- nazovBP -->
      <ng-container matColumnDef="nazovBP">
-       <!-- poznačiť chybu: názov diplomovej premenime na bakalárskej -->
-      <th mat-header-cell *matHeaderCellDef>názov bakalárskej práce</th> 
+      <th mat-header-cell *matHeaderCellDef>Názov bakalárskej práce</th> 
       <td mat-cell *matCellDef="let row">{{ row.zaverecnaPracaNazov }}</td>
     </ng-container>
 
      <!-- veduci -->
      <ng-container matColumnDef="veduci">
-      <th mat-header-cell *matHeaderCellDef>vedúci</th>
-      <td mat-cell *matCellDef="let row">{{ row.veduci }}</td>
+      <th mat-header-cell *matHeaderCellDef>Vedúci</th>
+      <td mat-cell *matCellDef="let row">{{ row.veduci | formatNameTitle }}</td>
     </ng-container>
 
      <!-- oponent -->
      <ng-container matColumnDef="oponent">
-      <th mat-header-cell *matHeaderCellDef>oponent</th>
-      <td mat-cell *matCellDef="let row">{{ row.oponent }}</td>
+      <th mat-header-cell *matHeaderCellDef>Oponent</th>
+      <td mat-cell *matCellDef="let row">{{ row.oponent | formatNameTitle }}</td>
     </ng-container>
 
      <!-- OH-veduci -->
      <ng-container matColumnDef="OH-veduci">
-      <th mat-header-cell *matHeaderCellDef>vedúci</th>
+      <th mat-header-cell *matHeaderCellDef>(OH) Vedúci</th>
       <td mat-cell *matCellDef="let row">{{ row.veduciHodnotenie }}</td>
     </ng-container>
 
      <!-- OH-oponent -->
      <ng-container matColumnDef="OH-oponent">
-      <th mat-header-cell *matHeaderCellDef>oponent</th>
+      <th mat-header-cell *matHeaderCellDef>(OH) Oponent</th>
       <td mat-cell *matCellDef="let row">{{ row.oponentHodnotenie }}</td>
     </ng-container>
 
      <!-- OH-komisia -->
      <ng-container matColumnDef="OH-komisia">
-      <th mat-header-cell *matHeaderCellDef>komisia</th>
+      <th mat-header-cell *matHeaderCellDef>(OH) Komisia</th>
       <td mat-cell *matCellDef="let row">{{ row.vysledneHodnotenie }}</td>
     </ng-container>
 
      <!-- P-vspBez -->
      <ng-container matColumnDef="P-vspBez">
-      <th mat-header-cell *matHeaderCellDef>VŠP- za  Bc.štúdium bez posledného semestra</th>
+      <th mat-header-cell *matHeaderCellDef>(Prospech) VŠP-za Bc.štúdium bez posledného semestra</th>
       <td mat-cell *matCellDef="let row">{{ row.vspStudium }}</td>
     </ng-container>
 
      <!-- P-vspCele -->
      <ng-container matColumnDef="P-vspCele">
-      <th mat-header-cell *matHeaderCellDef>VŠP- za celé Bc.štúdium</th>
+      <th mat-header-cell *matHeaderCellDef>(Prospech) VŠP-za celé Bc.štúdium</th>
       <td mat-cell *matCellDef="let row">{{ row.vspStudBpo }}</td>
     </ng-container>
 
      <!-- DI-BP2vAJ -->
      <ng-container matColumnDef="DI-BP2vAJ">
-      <th mat-header-cell *matHeaderCellDef>BP2 v AJ</th>
+      <th mat-header-cell *matHeaderCellDef>(DI) BP2 v AJ</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.bp2_v_aj }}<input type="text" placeholder="vstup" [(ngModel)]="row.bp2_v_aj" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
     <!-- DI-SSOpravnyTermin -->
     <ng-container matColumnDef="DI-SSOpravnyTermin">
-      <th mat-header-cell *matHeaderCellDef>ŠS  opravný termín</th>
+      <th mat-header-cell *matHeaderCellDef>(DI) ŠS opravný termín</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.ssOpravnyTermin }}<input type="text" placeholder="vstup" [(ngModel)]="row.ssOpravnyTermin" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
-    <!-- NCA-navrhVKomisii -->
+    <!-- NCA-navrhVKomisii VZOREC-->
     <ng-container matColumnDef="NCA-navrhVKomisii">
-      <th mat-header-cell *matHeaderCellDef>návrh v komisii</th>
+      <th mat-header-cell *matHeaderCellDef>(NCA) Návrh v komisii</th>
+      <!-- <td mat-cell *matCellDef="let row">=IF(OR(T34<>"";W34<>"";Z34<>"");"Navrh";"")</td> -->
       <td mat-cell *matCellDef="let row"> {{ navrhVKomisii(row) }}</td>
     </ng-container>
 
     <!-- NOKP-navrhVKomisiiPoradie -->
     <ng-container matColumnDef="NOKP-navrhVKomisiiPoradie">
-      <th mat-header-cell *matHeaderCellDef>návrh v komisii - poradie</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Návrh v komisii - poradie</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.navrhVKomisiiPoradie }}<input type="text" placeholder="vstup" [(ngModel)]="row.navrhVKomisiiPoradie" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
     <!-- NOKP-skorTeoreticka -->
     <ng-container matColumnDef="NOKP-skorTeoreticka">
-      <th mat-header-cell *matHeaderCellDef>skôr teoretická</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Skôr teoretická</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.skorTeoreticka }}<input type="text" placeholder="vstup" [(ngModel)]="row.skorTeoreticka" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
     <!-- NOKP-skorPrakticka -->
     <ng-container matColumnDef="NOKP-skorPrakticka">
-      <th mat-header-cell *matHeaderCellDef>skôr praktická</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Skôr praktická</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.skorPrakticka }}<input type="text" placeholder="vstup" [(ngModel)]="row.skorPrakticka" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
-    <!-- NOKP-autoNavrh -->
+    <!-- NOKP-autoNavrh VZOREC-->
     <ng-container matColumnDef="NOKP-autoNavrh">
-      <th mat-header-cell *matHeaderCellDef>Automatický návrh</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Automatický návrh</th>
       <td mat-cell *matCellDef="let row"></td>
     </ng-container>
 
     <!-- NOKP-navrhDoRSP -->
     <ng-container matColumnDef="NOKP-navrhDoRSP">
-      <th mat-header-cell *matHeaderCellDef>Návrh do RŠP</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Návrh do RŠP</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.navrhDoRSP1 }}<input type="text" placeholder="vstup" [(ngModel)]="row.navrhDoRSP1" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
     <!-- NOKP-konecneRozhodnutie -->
     <ng-container matColumnDef="NOKP-konecneRozhodnutie">
-      <th mat-header-cell *matHeaderCellDef>Konečné rozhodnutie (RŠP)</th>
+      <th mat-header-cell *matHeaderCellDef>(NOKP) Konečné rozhodnutie (RŠP)</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.konecneRozhodnutie1 }}<input type="text" placeholder="vstup" [(ngModel)]="row.konecneRozhodnutie1" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
-    <!-- OP-autoNavrh -->
+    <!-- OP-autoNavrh VZOREC-->
     <ng-container matColumnDef="OP-autoNavrh">
-      <th mat-header-cell *matHeaderCellDef>Automatický návrh</th>
+      <th mat-header-cell *matHeaderCellDef>(OP) Automatický návrh</th>
       <td mat-cell *matCellDef="let row"></td>
     </ng-container>
 
     <!-- OP-navrhDoRSP -->
     <ng-container matColumnDef="OP-navrhDoRSP">
-      <th mat-header-cell *matHeaderCellDef>Návrh do RŠP</th>
+      <th mat-header-cell *matHeaderCellDef>(OP) Návrh do RŠP</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.navrhDoRSP2 }}<input type="text" placeholder="vstup" [(ngModel)]="row.navrhDoRSP2" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
     <!-- OP-konecneRozhodnutie -->
     <ng-container matColumnDef="OP-konecneRozhodnutie">
-      <th mat-header-cell *matHeaderCellDef>Konečné rozhodnutie (RŠP)</th>
+      <th mat-header-cell *matHeaderCellDef>(OP) Konečné rozhodnutie (RŠP)</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.konecneRozhodnutie2 }}<input type="text" placeholder="vstup" [(ngModel)]="row.konecneRozhodnutie2" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
 
@@ -178,12 +187,12 @@
 
     <!-- najhorsiaZnamkaPriCR -->
     <ng-container matColumnDef="najhorsiaZnamkaPriCR">
-      <th mat-header-cell *matHeaderCellDef>Najhorsia znamka pri CR</th>
+      <th mat-header-cell *matHeaderCellDef>Najhoršia známka pri CR</th>
       <td mat-cell *matCellDef="let row" class="type--input">{{ row.najhorsiaZnamka }}<input type="text" placeholder="vstup" [(ngModel)]="row.najhorsiaZnamka" (ngModelChange)="change(row)" [ngModelOptions]="{updateOn: 'blur'}"></td>
     </ng-container>
     
 
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
