Vyhodnotenie ŠZS BC - vzorce pre stlpce a vypísanie parametrov

--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list-bc/state-final-exams-list-bc.component.scss
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list-bc/state-final-exams-list-bc.component.scss
@@ -36,3 +36,11 @@ td.mat-cell {
     z-index: 10;
   }
 }
+
+form {
+  label {
+    min-width: 200px;
+    margin: 5px;
+    font-size: 11px;
+  }
+}
