--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-bc/state-final-exams-bc.component.html
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-bc/state-final-exams-bc.component.html
@@ -14,5 +14,5 @@
 
   {{ data ? data[0].AIS_ID : '' }}
   
-  <app-state-final-exams-list-bc [data]="data"></app-state-final-exams-list-bc>
+  <app-state-final-exams-list-bc [data]="data" [examConfig]="examConfig"></app-state-final-exams-list-bc>
 </div>
