frontend mapovania prihlášok

--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -88,6 +88,11 @@
     Mapovanie atribútov
   </button>
 
+  <span *ngIf="attrMapping.length" class="text-success" margin-left>
+    <i class="fas fa-check"></i>
+    Mapovanie atribútov bolo pridané.
+  </span>
+
   <button
     class="btn-lg float-right"
     mat-raised-button
