--- a/bakalarka-frontend/src/styles.scss
+++ b/bakalarka-frontend/src/styles.scss
@@ -41,6 +41,10 @@ body {
   justify-content: center;
 }
 
+[justify-content-evenly] {
+  justify-content: space-evenly;
+}
+
 [align-items-center] {
   align-items: center;
 }
