--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -284,7 +284,7 @@
   [showMarkers]="false"
 ></app-map>
 
-<h3 id="abroad-students" margin-top>Zahraniční študenti</h3>
+<h3 id="abroad-students" margin-top>Zahraničné prihlášky</h3>
 <hr>
 
 <div class="row">
