--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -3,7 +3,7 @@
   <p class="lead">Údaje označené symbolom <strong>*</strong> sú povinné.</p>
   <mat-divider></mat-divider>
 
-  <mat-radio-group [(ngModel)]="selectedSource" class="mt-4" (ngModelChange)="onFormChange()">
+  <mat-radio-group [(ngModel)]="selectedSource" class="source mt-4" (ngModelChange)="onFormChange()">
     <mat-radio-button value="ais" (click)="resetForm()">AIS</mat-radio-button>
     <mat-radio-button value="ineko" (click)="resetForm()">INEKO</mat-radio-button>
   </mat-radio-group>
