--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-lg-4">
-      <form [formGroup]="filterForm" (ngSubmit)="onFilter()">
+      <form [formGroup]="filterForm" class="filterForm" (ngSubmit)="onFilter()">
         <select
           class="custom-select"
           formControlName="degree"
