--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-bc/state-final-exams-bc.component.scss
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-bc/state-final-exams-bc.component.scss
@@ -9,3 +9,12 @@ ul {
     font-size: 12px;
   }
 }
+form {
+  padding-left: 10px;
+  .custom-select {
+    margin: 10px 0 15px;
+  } 
+  button {
+    margin-left: -10px;
+  }
+}
