--- a/bakalarka-frontend/src/app/login/login.component.html
+++ b/bakalarka-frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- Ak je user prihlaseny nezobrazi sa loin page -->
+<!-- Ak je user prihlaseny nezobrazi sa login page -->
 <div class="loginpage"  *ngIf="!authService.loggedIn">
 
   <h1>Prihlásenie</h1>
@@ -9,9 +9,12 @@
     <mat-form-field>
       <input matInput type="password" name="password" placeholder="Heslo" [(ngModel)]="_password">
     </mat-form-field>
+    <ng-container *ngIf="authResult">
+      <span [class]="authResult.type">{{ authResult.message }}</span>
+    </ng-container>
     <button type="submit" [disabled]="!(_email && _password)" mat-raised-button>
       Prihlásiť
     </button>
   </form>
-
+<p class="info">*pre správne fungovanie použite univerzitnú sieť!</p>
 </div>
