--- a/bakalarka-frontend/src/app/login/login.component.scss
+++ b/bakalarka-frontend/src/app/login/login.component.scss
@@ -8,6 +8,17 @@
     padding-bottom: 20px;
   }
 
+  p {
+    position: relative;
+    &.info {
+      font-size: 12px;
+      // color: #9dbdf5;
+      color: gray;
+      position: absolute;
+      bottom: 50px;
+    }
+  }
+
   form {
     display: inline-block;
     min-width: 300px;
@@ -18,4 +29,18 @@
     width: 100%;
   }
 
+  span {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 11px;
+
+    &.success {
+      color: green;
+    }
+  
+    &.error {
+      color: red;
+    }
+  }
 }
