--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -82,7 +82,7 @@
   <button
     mat-raised-button
     color="primary"
-    [disabled]="!selectedImportAttrs.length || !selectedFileAttrs.length"
+    [disabled]="!selectedImportAttrs.length && !selectedFileAttrs.length"
     (click)="openAttrMapping()"
   >
     Mapovanie atribútov
