--- a/bakalarka-frontend/src/app/pages/import/mapping-dialog/mapping-dialog.component.html
+++ b/bakalarka-frontend/src/app/pages/import/mapping-dialog/mapping-dialog.component.html
@@ -43,6 +43,7 @@
     <button
       class="btn btn-primary"
       type="submit"
+      [disabled]="mappingForm.invalid"
     >
     Vytvoriť mapovanie
   </button>
