--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -19,48 +19,49 @@
           <option value="Bakalársky">Bakalársky stupeň</option>
           <option value="Inžiniersky">Inžiniersky stupeň</option>
         </select>
-        <select
-          class="custom-select"
-          formControlName="studyType"
-          margin-bottom
-        >
-          <option value="all">Všetky typy štúdia</option>
-          <option value="3">Trojročné štúdium</option>
-          <option value="4">Štvorročné štúdium</option>
-        </select>
-        <select
-          class="custom-select"
-          formControlName="schoolType"
-          margin-bottom
-        >
-          <option value="all">Všetky typy škôl</option>
-          <option value="gymnasium">Gymnáziá</option>
-          <option value="technical">Odborné školy</option>
-          <option value="other">Ostatné</option>
-        </select>
-
-        <div flex margin-bottom>
+        <div [hidden]="filterForm.controls.degree.value !== 'Bakalársky'">
           <select
             class="custom-select"
-            formControlName="pointsType"
+            formControlName="studyType"
+            margin-bottom
           >
-            <option value="all">Všetci</option>
-            <option value="Všeobecné_študijné_predpoklady_SCIO_VŠP">SCIO - Všeobecné študijné predpoklady</option>
-            <option value="Písomný_test_z_matematiky_SCIO_PTM">SCIO - Matematika</option>
-            <option value="Externá_maturita_z_matematiky_EM">Externá maturita - Matematika</option>
-            <option value="Externá_maturita_z_cudzieho_jazyka_ECJ">Externá maturita - Cudzie jazyky</option>
-            <option value="notprovided">Neuvedené hodnoty</option>
+            <option value="all">Všetky typy štúdia</option>
+            <option value="3">Trojročné štúdium</option>
+            <option value="4">Štvorročné štúdium</option>
+          </select>
+          <select
+            class="custom-select"
+            formControlName="schoolType"
+            margin-bottom
+          >
+            <option value="all">Všetky typy škôl</option>
+            <option value="gymnasium">Gymnáziá</option>
+            <option value="technical">Odborné školy</option>
+            <option value="other">Ostatné</option>
           </select>
 
-          <div *ngIf="filterForm.value.pointsType !== 'all'" flex>
-            <input
-              formControlName="pointsValue"
-              type="range" min="0" max="100"
-              margin-left
+          <div flex margin-bottom>
+            <select
+              class="custom-select"
+              formControlName="pointsType"
             >
-            <span padding-left>od {{ filterForm.get('pointsValue').value }}</span>
-          </div>
+              <option value="all">Všetci</option>
+              <option value="Všeobecné_študijné_predpoklady_SCIO_VŠP">SCIO - Všeobecné študijné predpoklady</option>
+              <option value="Písomný_test_z_matematiky_SCIO_PTM">SCIO - Matematika</option>
+              <option value="Externá_maturita_z_matematiky_EM">Externá maturita - Matematika</option>
+              <option value="Externá_maturita_z_cudzieho_jazyka_ECJ">Externá maturita - Cudzie jazyky</option>
+              <option value="notprovided">Neuvedené hodnoty</option>
+            </select>
 
+            <div *ngIf="filterForm.value.pointsType !== 'all'" flex>
+              <input
+                formControlName="pointsValue"
+                type="range" min="0" max="100"
+                margin-left
+              >
+              <span padding-left>od {{ filterForm.get('pointsValue').value }}</span>
+            </div>
+          </div>
         </div>
 
         <div
